Bug 124211 - Crash when pasting a sheet containing a 3D object
Summary: Crash when pasting a sheet containing a 3D object
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: high major
Assignee: Julien Nabet
URL:
Whiteboard: target:6.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-03-19 18:30 UTC by Telesto
Modified: 2024-05-02 08:41 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (53.95 KB, application/vnd.oasis.opendocument.presentation)
2019-03-20 10:40 UTC, Telesto
Details
BT without symbols (5.54 KB, text/plain)
2019-03-20 10:44 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2019-03-19 18:30:39 UTC
Description:
Crash when pasting a sheet containing a 3D object

Steps to Reproduce:
1. Open Impress (Empty sheet; ignore template)
2. Insert a 3D object (cube)
3. Copy sheet in Slides panel (CTRL+C)
4. Press CTRL+V -> Crash

Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.3.0.0.alpha0+
Build ID: bbf9b65f91e8136fa1a2e17960944b8720f5d58e
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-03-15_09:56:33
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: threaded
Comment 1 Telesto 2019-03-19 18:35:32 UTC
Appears to be happening with templates too
Comment 2 Xisco Faulí 2019-03-20 09:46:41 UTC
I can't reproduce it in

Version: 6.3.0.0.alpha0+
Build ID: a11a2d84b09f85d2020c47f3ce42cd9efbff818a
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

nor in

Versión: 6.2.2.1
Id. de compilación: fcd633fb1bf21b0a99c9acb3ad6e526437947b01
Subprocs. CPU: 1; SO: Windows 6.1; Repres. IU: predet.; VCL: win; 
Configuración regional: es-ES (es_ES); Idioma de IU: es-ES
Calc: threaded
Comment 3 Telesto 2019-03-20 10:35:40 UTC
Mystery to me.. Multiple crashes yesterday.. Fine today
Comment 4 Telesto 2019-03-20 10:40:16 UTC
Created attachment 150115 [details]
Example file
Comment 5 Telesto 2019-03-20 10:42:21 UTC
Different steps to reproduce, but probably the same thing
1. Open the attached file
2. Click randomly on the sheets in the sheet panel (fast) will crash after 5-10 clicks
Comment 6 Telesto 2019-03-20 10:44:41 UTC
Created attachment 150116 [details]
BT without symbols
Comment 7 Durgapriyanka 2019-03-20 14:34:07 UTC
Thank you for reporting the bug. I cannot reproduce this bug in

Version: 6.3.0.0.alpha0+
Build ID: b6b28931435e44aca92b8c0e1659f701e3ed1a87
CPU threads: 2; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-01-30_06:57:04
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
Comment 8 Xisco Faulí 2019-03-20 14:37:56 UTC
(In reply to Telesto from comment #3)
> Mystery to me.. Multiple crashes yesterday.. Fine today

So you can no longer reproduce it ? Did you upgrade to a newer version ?
Comment 9 Telesto 2019-03-20 14:42:26 UTC
(In reply to Xisco Faulí from comment #8)
> (In reply to Telesto from comment #3)
> > Mystery to me.. Multiple crashes yesterday.. Fine today
> 
> So you can no longer reproduce it ? Did you upgrade to a newer version ?

I can't produce it with steps given in comment 0 (nothing changed, except a reboot). I do get a crash with steps given in comment 5 with the same build
Comment 10 MM 2019-03-20 17:58:40 UTC
(In reply to Telesto from comment #5)
> Different steps to reproduce, but probably the same thing
> 1. Open the attached file
> 2. Click randomly on the sheets in the sheet panel (fast) will crash after
> 5-10 clicks

I can confirm this on mint 19.1 with Version: 6.3.0.0.alpha0+
Build ID: a03f421a878c210566dc8d728113a27400da38f2
CPU threads: 2; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-03-16_09:07:41
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

Crash -> Vector::Reserve
Comment 11 Xisco Faulí 2019-03-20 18:06:19 UTC
ok, I can reproduce it too. Bisecting...
Comment 12 Xisco Faulí 2019-03-20 18:14:57 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=8f6a170e4bbb5d0a0bf06d26560189e4ca7ecfb0

author	Noel Grandin <noel.grandin@collabora.co.uk>	2019-02-14 09:11:13 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2019-02-15 08:45:07 +0100
commit 8f6a170e4bbb5d0a0bf06d26560189e4ca7ecfb0 (patch)
tree 936461ded988c8105845dd7035744d878375fe1d
parent 298284f4a6578aefc4268b7f4b5de6c2e4203465 (diff)
loplugin:flatten in sd/source/ui/slidesorter

Bisected with: bibisect-linux64-6.3

Adding Cc: to Noel Grandin
Comment 13 Julien Nabet 2019-03-20 20:54:27 UTC
On pc Debian x86-64 with master sources updated yesterday, I don't reproduce the crash with gtk3 or gen renderings.
I only noticed lots of these:
warn:legacy.osl:5415:5415:sd/source/ui/slidesorter/controller/SlsPageSelector.cxx:215: PageSelector: Consistency error (!)
Comment 14 Noel Grandin 2019-03-21 06:24:49 UTC
I can see the bug,
   PageSelector::DeselectPage
should have 
    if (rpDescriptor.get()==nullptr
        || !mrSlideSorter.GetView().SetState(rpDescriptor, PageDescriptor::ST_Selected, false))
        return;

Note the missing "!'

But I'm only back in the office next week
Comment 15 Julien Nabet 2019-03-21 07:52:45 UTC
I'll be able to submit a patch only tonight after my daytime job.
Xisco: if you want to submit one before, don't hesitate.
Comment 16 Xisco Faulí 2019-03-21 09:26:06 UTC
(In reply to Julien Nabet from comment #15)
> I'll be able to submit a patch only tonight after my daytime job.
> Xisco: if you want to submit one before, don't hesitate.

The crash is happening in master only, so we can wait for you or noel to submit a fix! Thanks
Comment 17 Julien Nabet 2019-03-21 20:25:20 UTC
Fix submitted here:
https://gerrit.libreoffice.org/#/c/69540/
Comment 18 Commit Notification 2019-03-22 07:49:20 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/9b1ae71ee1ff4ba159a9265900ef019604b9b64e%5E%21

tdf#124211: fix regression in sd/slidesorter

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Xisco Faulí 2019-03-22 09:55:24 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: f8ca6e0a59bff51fcb09af4fa6d9cd458b32f223
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Julien/Noel, Thanks for fixing this issue!!