tdf#124211: fix regression in sd/slidesorter

https://cgit.freedesktop.org/libreoffice/core/commit/?id=8f6a170e4bbb5d0a0bf06d26560189e4ca7ecfb0

Change-Id: I2b574cc7ddaf55e770bc5b746e615834f413b6b4
Reviewed-on: https://gerrit.libreoffice.org/69540
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>